Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44502

Fusion style HiDpi pushbutton icon is misplaced

XMLWordPrintable

    • Change-Id: Ie05012266abe52bc33bb9c2e19c93353cac3307f

      Use Qt::AA_UseHighDpiPixmaps in retina display with Fusion style and try to draw QPushButton with icon. Icon is misplaced. See attached image.

        1. Screen Shot 2015-02-16 at 16.04.09.png
          15 kB
          Qt Support
        2. QTBUG-44502-fix.diff
          0.8 kB
          Qt Support
        3. QTBUG-44502.zip
          4 kB
          Qt Support
        For Gerrit Dashboard: QTBUG-44502
        # Subject Branch Project Status CR V

            markan Marko Kangas
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes