Fix fusion style QPushButton icon on HiDPI mode

Change-Id: Ie05012266abe52bc33bb9c2e19c93353cac3307f
Task-number: QTBUG-44502
Reviewed-by: Jens Bache-Wiig <jensbw@gmail.com>